[gd_scene load_steps=7 format=3 uid="uid://bj2jwsffkrpm7"]

[ext_resource type="Script" path="res://scenes/AttacksClosest.gd" id="1_fo221"]
[ext_resource type="Script" path="res://scenes/guns/simple_gun.gd" id="1_k0p8x"]
[ext_resource type="Script" path="res://scenes/SeesClosest.gd" id="2_i8iuj"]
[ext_resource type="Texture2D" uid="uid://38bokvrgn4ge" path="res://assets/gun-svmg.png" id="4_2grjk"]
[ext_resource type="AudioStream" uid="uid://c8hon8cyd0qny" path="res://assets/SFX and BGM/Shots/slushyshot.wav" id="5_hox2b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lscwh"]
radius = 800.0

[node name="SimpleGun" type="Node2D"]
script = ExtResource("1_k0p8x")

[node name="AttacksClosest" type="Node" parent="."]
script = ExtResource("1_fo221")

[node name="Timer" type="Timer" parent="AttacksClosest"]
wait_time = 0.5
autostart = true

[node name="SeesClosest" type="Node" parent="."]
script = ExtResource("2_i8iuj")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-36, 0)
texture = ExtResource("4_2grjk")
region_rect = Rect2(0, 0, 32, 32)

[node name="BulletStartPoint" type="Marker2D" parent="."]
position = Vector2(-53, 10)

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_lscwh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hox2b")

[connection signal="timeout" from="AttacksClosest/Timer" to="AttacksClosest" method="_on_timer_timeout"]
